src/objects/Provider_Matrix__c.object
<CustomObject>
    <fields>
        <fullName>ARPI_scenario_Job_Aid__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>ARPI scenario(s)/ Job Aid</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Case_Resolution_Partner_Ticket_Type__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Case Resolution Partner Ticket Type</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>LOB__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Appeals and Grievances</fullName>
                </value>
                <value>
                    <fullName>Appeals Issues</fullName>
                </value>
                <value>
                    <fullName>Authorization</fullName>
                </value>
                <value>
                    <fullName>Authorizations</fullName>
                </value>
                <value>
                    <fullName>BCCI</fullName>
                </value>
                <value>
                    <fullName>BCO (Benefit Configuration Operations)</fullName>
                </value>
                <value>
                    <fullName>Bridge</fullName>
                </value>
                <value>
                    <fullName>Check/TRACR</fullName>
                </value>
                <value>
                    <fullName>Claim Operations</fullName>
                </value>
                <value>
                    <fullName>Claims Resolution</fullName>
                </value>
                <value>
                    <fullName>Claims Resolution Oxford</fullName>
                </value>
                <value>
                    <fullName>Clinical</fullName>
                </value>
                <value>
                    <fullName>COB</fullName>
                </value>
                <value>
                    <fullName>COB/Eligibility</fullName>
                </value>
                <value>
                    <fullName>Contracting and Pricing</fullName>
                </value>
                <value>
                    <fullName>CPM</fullName>
                </value>
                <value>
                    <fullName>CRT</fullName>
                </value>
                <value>
                    <fullName>CSP DROID Macro</fullName>
                </value>
                <value>
                    <fullName>Customer Service</fullName>
                </value>
                <value>
                    <fullName>Data Entry</fullName>
                </value>
                <value>
                    <fullName>Dedicated Accounts</fullName>
                </value>
                <value>
                    <fullName>EDI</fullName>
                </value>
                <value>
                    <fullName>Eligibility</fullName>
                </value>
                <value>
                    <fullName>Escalated Exceptions</fullName>
                </value>
                <value>
                    <fullName>Exceptions - Provider &amp; Contract</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>Genetics</fullName>
                </value>
                <value>
                    <fullName>Health Plan</fullName>
                </value>
                <value>
                    <fullName>High Dollar Claim Review</fullName>
                </value>
                <value>
                    <fullName>IT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Claim_Platform__c</fullName>
        <label>Claim Platform</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                </value>
                <value>
                    <fullName>Cirrus &amp; Pulse</fullName>
                </value>
                <value>
                    <fullName>Cirrus Cosmos NICE Pulse UNET</fullName>
                </value>
                <value>
                    <fullName>Cirrus, NICE, Pulse, TRICARE, UMR, UNET</fullName>
                </value>
                <value>
                    <fullName>COSMOS</fullName>
                </value>
                <value>
                    <fullName>COSMOS - Medica;</fullName>
                </value>
                <value>
                    <fullName>COSMOS - Medica;UNET;</fullName>
                </value>
                <value>
                    <fullName>Cosmos UNET</fullName>
                </value>
                <value>
                    <fullName>COSMOS, NICE</fullName>
                </value>
                <value>
                    <fullName>COSMOS, UNET</fullName>
                </value>
                <value>
                    <fullName>Cosmos/NICE/CSP</fullName>
                </value>
                <value>
                    <fullName>COSMOS;</fullName>
                </value>
                <value>
                    <fullName>COSMOS; UNET</fullName>
                </value>
                <value>
                    <fullName>COSMOS; UNET; RV Facets</fullName>
                </value>
                <value>
                    <fullName>COSMOS;COSMOS - Medica;</fullName>
                </value>
                <value>
                    <fullName>COSMOS;COSMOS - Medica;DIAMOND;FACETS;TOPS;UNET;</fullName>
                </value>
                <value>
                    <fullName>COSMOS;COSMOS - Medica;FACETS;NICE;PRIME;TOPS;UNET;</fullName>
                </value>
                <value>
                    <fullName>COSMOS;NICE;</fullName>
                </value>
                <value>
                    <fullName>COSMOS;UNET;</fullName>
                </value>
                <value>
                    <fullName>COSMOS;UNET;FACETS;</fullName>
                </value>
                <value>
                    <fullName>COSOMS/NICE</fullName>
                </value>
                <value>
                    <fullName>CSP</fullName>
                </value>
                <value>
                    <fullName>CSP Facets</fullName>
                </value>
                <value>
                    <fullName>CSP Facets, UNET, COSMOS</fullName>
                </value>
                <value>
                    <fullName>CSP Facets/ COSMOS</fullName>
                </value>
                <value>
                    <fullName>E&amp;I Oxford - Pulse &amp; Cirrus</fullName>
                </value>
                <value>
                    <fullName>Email, SharePoint</fullName>
                </value>
                <value>
                    <fullName>FACETS</fullName>
                </value>
                <value>
                    <fullName>NICE</fullName>
                </value>
                <value>
                    <fullName>PRIME;</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CrossWalk_Case_RPI__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>CrossWalk Case RPI</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Escalation_Process__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Escalation Process</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Is_Globally_Accessed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This picklist will denote if the record should be accessed by other users, if the checkbox is true then this record can be accessed by everyone. if false then can be accessed by only admins</description>
        <label>Is Globally Accessed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LOB__c</fullName>
        <label>LOB</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>C&amp;S</fullName>
                </value>
                <value>
                    <fullName>E&amp;I</fullName>
                </value>
                <value>
                    <fullName>M&amp;R</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Leadership_Contact__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Leadership Contact</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Resolution_Partner_SLA__c</fullName>
        <label>Resolution Partner SLA</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SOP_Source_of_Truth__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>SOP/Source of Truth</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Sub_Category__c</fullName>
        <label>Sub Category</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Category__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>**SME &amp; MANAGER USE ONLY** OptumHealth BH Claims - COSMOS</fullName>
                </value>
                <value>
                    <fullName>1st Level Reconsideration Letters (sent via LetGen)</fullName>
                </value>
                <value>
                    <fullName>692 MARS Review</fullName>
                </value>
                <value>
                    <fullName>835 EDI Issues - Electronic Data Interchage (EDI)</fullName>
                </value>
                <value>
                    <fullName>AARP Medicare Supplemental on UCPS platform (Ovations GPS)</fullName>
                </value>
                <value>
                    <fullName>Accountable Mail</fullName>
                </value>
                <value>
                    <fullName>Advocate</fullName>
                </value>
                <value>
                    <fullName>Advocate Health Delegated Plans COSMOS</fullName>
                </value>
                <value>
                    <fullName>All Savers Insurance Company / American Medical Security (AMS) Claim issues</fullName>
                </value>
                <value>
                    <fullName>AP Help Tool- Issued to Providers without EOB/Remittance Information</fullName>
                </value>
                <value>
                    <fullName>Appeals - C&amp;S</fullName>
                </value>
                <value>
                    <fullName>Appeals E &amp; I (ONE Escalations)</fullName>
                </value>
                <value>
                    <fullName>BCCI for member benefit issues in system</fullName>
                </value>
                <value>
                    <fullName>BCO</fullName>
                </value>
                <value>
                    <fullName>BCU - CEAP</fullName>
                </value>
                <value>
                    <fullName>BCU - New Day Claim Holds</fullName>
                </value>
                <value>
                    <fullName>BCU Documentation</fullName>
                </value>
                <value>
                    <fullName>Behavioral Health- New Mexico DSNP</fullName>
                </value>
                <value>
                    <fullName>Benefit (member deductible) - Individual Conversion Unit</fullName>
                </value>
                <value>
                    <fullName>Benefit Exceptions</fullName>
                </value>
                <value>
                    <fullName>Bridge</fullName>
                </value>
                <value>
                    <fullName>C&amp;S Automation</fullName>
                </value>
                <value>
                    <fullName>C&amp;S COSMOS reviews</fullName>
                </value>
                <value>
                    <fullName>C&amp;S CSP Review</fullName>
                </value>
                <value>
                    <fullName>CALL RECORDINGS / Member Services Call recordings</fullName>
                </value>
                <value>
                    <fullName>CALL RECORDINGS / Provider Call Ops</fullName>
                </value>
                <value>
                    <fullName>CAT Cases</fullName>
                </value>
                <value>
                    <fullName>CBRM  Non-par HCFA provider setup</fullName>
                </value>
                <value>
                    <fullName>CE Pending Signature</fullName>
                </value>
                <value>
                    <fullName>Check Returns - Recovery Refund Dept(TRACR2)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Submission_Channel__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Submission Channel</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Submission_Criteria__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Submission Criteria</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Type_of_Issues_IN_SCOPE__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Type of Issues IN SCOPE</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Type_of_Issues_OUT_of_scope__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Type of Issues OUT of scope</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <label>Provider Matrix</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CrossWalk_Case_RPI__c</columns>
        <columns>Resolution_Partner_SLA__c</columns>
        <columns>LOB__c</columns>
        <columns>Category__c</columns>
        <columns>Sub_Category__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Community_and_State_LOB</fullName>
        <columns>NAME</columns>
        <columns>CrossWalk_Case_RPI__c</columns>
        <columns>Resolution_Partner_SLA__c</columns>
        <columns>LOB__c</columns>
        <columns>Category__c</columns>
        <columns>Sub_Category__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LOB__c</field>
            <operation>equals</operation>
            <value>C&amp;S</value>
        </filters>
        <label>Community &amp; State LOB</label>
    </listViews>
    <listViews>
        <fullName>Employer_Individual_LOB</fullName>
        <columns>NAME</columns>
        <columns>CrossWalk_Case_RPI__c</columns>
        <columns>Resolution_Partner_SLA__c</columns>
        <columns>LOB__c</columns>
        <columns>Category__c</columns>
        <columns>Sub_Category__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LOB__c</field>
            <operation>equals</operation>
            <value>E&amp;I</value>
        </filters>
        <label>Employer &amp; Individual LOB</label>
    </listViews>
    <listViews>
        <fullName>Medical_and_Retirement_LOB</fullName>
        <columns>NAME</columns>
        <columns>CrossWalk_Case_RPI__c</columns>
        <columns>Resolution_Partner_SLA__c</columns>
        <columns>LOB__c</columns>
        <columns>Category__c</columns>
        <columns>Sub_Category__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LOB__c</field>
            <operation>equals</operation>
            <value>M&amp;R</value>
        </filters>
        <label>Medicare &amp; Retirement LOB</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Provider Matrix Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Provider Matrix</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>